<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/colorSkyBlue"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:text="@string/ptcl"
            android:textSize="24dp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:background="@color/colorSkyBlueLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"></FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:background="@color/colorGray"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/admin"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/welcome" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@color/colorGrayLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="12dp"
            android:text="@string/status" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView4"
            android:layout_alignStart="@+id/textView4"
            android:layout_alignLeft="@+id/textView4"
            android:layout_marginTop="6dp"
            android:background="@drawable/border_corner"
            android:paddingLeft="7dp"
            android:paddingTop="2dp"
            android:paddingRight="7dp"
            android:paddingBottom="2dp"
            android:text="@string/total_users" />

        <TextView
            android:id="@+id/users"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView4"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="6dp"
            android:layout_toEndOf="@+id/textView5"
            android:layout_toRightOf="@+id/textView5"
            android:background="@drawable/border_corner"
            android:padding="2dp"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView5"
            android:layout_alignStart="@+id/textView5"
            android:layout_alignLeft="@+id/textView5"
            android:layout_marginTop="12dp"
            android:text="@string/filter" />

        <Spinner
            android:id="@+id/regions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView7"
            android:layout_alignStart="@+id/textView7"
            android:layout_alignLeft="@+id/textView7"
            android:layout_marginTop="6dp"
            android:background="@drawable/border_corner"
            android:paddingLeft="7dp"
            android:paddingTop="2dp"
            android:paddingRight="7dp"
            android:paddingBottom="2dp"
            android:text="@string/region" />

        <!--        <Spinner-->
        <!--            android:id="@+id/regions"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="0dp"-->
        <!--            android:layout_below="@id/textView7"-->
        <!--            android:layout_marginStart="17dp"-->
        <!--            android:layout_marginLeft="17dp"-->
        <!--            android:layout_marginTop="6dp"-->
        <!--            android:layout_toEndOf="@+id/textView8"-->
        <!--            android:layout_toRightOf="@+id/textView8"-->
        <!--            android:background="@drawable/border"-->
        <!--            android:paddingLeft="7dp"-->
        <!--            android:paddingTop="2dp"-->
        <!--            android:paddingRight="7dp"-->
        <!--            android:paddingBottom="2dp"-->
        <!--            android:text="@string/dropdown" />-->

        <TextView
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView7"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="6dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/border_corner"
            android:paddingLeft="7dp"
            android:paddingTop="2dp"
            android:paddingRight="7dp"
            android:paddingBottom="2dp"
            android:text="@string/search" />

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                >

                <TableLayout
                    android:id="@+id/tableLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TableRow
                        android:id="@+id/tableRow"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/index"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/border_corner"
                            android:gravity="center"
                            android:text="@string/index"
                            android:textAlignment="center"
                            android:textSize="18dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/emp_no"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/border_corner"
                            android:gravity="center"
                            android:text="@string/emp_no"
                            android:textAlignment="center"
                            android:textSize="18dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/border_corner"
                            android:gravity="center"
                            android:text="@string/name"
                            android:textAlignment="center"
                            android:textSize="18dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/mobile"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/border_corner"
                            android:gravity="center"
                            android:text="@string/mobile"
                            android:textAlignment="center"
                            android:textSize="18dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/cc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/border_corner"
                            android:gravity="center"
                            android:layout_marginRight="20dp"
                            android:text="@string/tcc"
                            android:textAlignment="center"
                            android:textSize="18dp"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/last"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textAlignment="center"
                            android:textSize="18dp"
                            android:textStyle="bold" />

                    </TableRow>
                </TableLayout>
            </HorizontalScrollView>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="end"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/downloadSr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:background="@color/colorBlue"
            android:padding="10dp"
            android:text="@string/sr"
            android:textColor="@color/colorWhite" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>