<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".activities.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/loginBottom"
            android:background="@drawable/bg_blue_btn"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/logon"
            android:layout_marginEnd="60dp"
android:layout_marginStart="60dp"
            android:textColor="#ffffff"
            android:textAllCaps="false"
            android:textSize="22dp"
            app:layout_constraintBottom_toTopOf="@+id/loginBottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.204" />


        <RelativeLayout
            android:id="@+id/loginBottom"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bg_btn_play"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <!--            <TextView-->
            <!--                android:id="@+id/forgotPass"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_centerVertical="true"-->
            <!--                android:layout_marginLeft="15dp"-->
            <!--                android:fontFamily="@font/montserrat_regular"-->
            <!--                android:text="@string/forgot_password"-->
            <!--                android:textColor="@color/blue_dark"-->
            <!--                android:textSize="16dp"></TextView>-->

            <LinearLayout
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/link_signup"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:textStyle="bold"
                  ></TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_toLeftOf="@+id/signup"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/no_account"
                    android:textColor="@color/blue"
                    android:textSize="15dp"></TextView>

            </LinearLayout>
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <RelativeLayout
            android:id="@+id/relativeLayoutName"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/bg_edit_text"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <EditText
                android:id="@+id/empNo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:hint="@string/hint_name"
                android:text="admin"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20dp"></EditText>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayoutEmpConfirm"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_edit_text"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayoutName">


            <EditText
                android:id="@+id/Pasword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="abdullah"
                android:hint="@string/hint_emp_num"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20dp"></EditText>

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="52dp"
            android:layout_height="53dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="157dp"
            android:layout_marginTop="286dp"
            android:layout_marginEnd="157dp"
            android:layout_marginBottom="397dp"
            android:visibility="gone"
            android:backgroundTint="@color/yallow_dark"
            android:progressBackgroundTint="@color/yallow_dark"
            android:progressTint="@color/yallow_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider">

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.19"
            app:srcCompat="@drawable/ptcl_logo" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.19"
            app:srcCompat="@drawable/training_logo" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="130dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:layout_marginBottom="16dp"
            android:src="@drawable/splash_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="116dp"
            android:fontFamily="@font/dubai_bold"
            android:gravity="center"
            android:text="We help you in elearning"
            android:textColor="@color/learning_color"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/logo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>